# minimaximage

./: .env.example  .gitignore  BUILDING.md  README.md  pyproject.toml  pyrightconfig.json
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
output/: history.json
scripts/: build.py  build_frontend.py
src/minimaximage/: __init__.py  __main__.py  cli.py  client.py  config.py  desktop.py  download.py  generate.py  gui.py  models.py  server.py
tests/: conftest.py  test_application.py  test_cli.py  test_client.py  test_config.py  test_download.py  test_generate.py  test_gui.py  test_models.py  test_server.py
